// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stories/components/inputs/NodeField Combobox smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Yksikkö",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "autocomplete": "list",
      "checked": undefined,
      "children": undefined,
      "haspopup": "listbox",
      "name": "Yksikkö",
      "pressed": undefined,
      "role": "combobox",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "description": "Avaa",
      "name": "Avaa",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "stories-components-inputs-nodefield--combobox",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;

exports[`stories/components/inputs/NodeField Search smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Hae yksikköä",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "autocomplete": "list",
      "checked": undefined,
      "children": undefined,
      "haspopup": "listbox",
      "name": "Hae yksikköä",
      "pressed": undefined,
      "role": "combobox",
      "value": undefined,
    },
  ],
  "name": "stories-components-inputs-nodefield--search",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;

exports[`stories/components/inputs/NodeField Selected play-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Yksikkö",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "autocomplete": "list",
      "checked": undefined,
      "children": undefined,
      "focused": true,
      "haspopup": "listbox",
      "name": "Yksikkö",
      "pressed": undefined,
      "role": "combobox",
      "value": "HY, Kielikeskus (KIELIKESKUS)",
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "description": "Tyhjennä",
      "name": "Tyhjennä",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "description": "Avaa",
      "name": "Avaa",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "stories-components-inputs-nodefield--selected",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;
